@@ -26,3 +26,4 @@ sample-config/httpd.conf
 share/pnp/application/logs/*
 contrib/ssi/status-header.ssi
 scripts/verify_pnp_config.pl
+sample-config/lighttpd.pnp4nagios.conf
