@@ -294,6 +294,7 @@ $PERL subst share/pnp/index.php
 $PERL subst share/pnp/install.php 
 $PERL subst share/pnp/application/config/config.php 
 $PERL subst sample-config/httpd.conf
+$PERL subst sample-config/lighttpd.pnp4nagios.conf
 $PERL subst sample-config/nagios.cfg-sample
 $PERL subst sample-config/misccommands.cfg-sample 
 $PERL subst sample-config/pnp/config.php 
