@@ -1,5 +1,6 @@
 **pnp-0.6.2 ??/??/2009**
 
+  * Feature: PNP will now work with [[http://http://www.lighttpd.net|lighttpd]] and php-cgi
   * Template: check_mk-ps.perf.php added ( by Mathias Kettner )
   * Feature: PNP will now work without mod_rewrite -> [[webfe]] 
   * Bugfix: Wrong pdf link used on site 'pages' and 'basket'
